# uv-docker-example

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
src/uv_docker_example/: __init__.py
