[project]
name = "uv-docker-example"
version = "0.1.0"
description = "An example of using uv with FastAPI in Docker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = "uv_docker_example:hello"

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.4",
    "fastapi-cli>=0.0.7",
    "debugpy>=1.8.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/uv_docker_example"]